Added a FloxExerciser Test

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,22 @@
 	</properties>
 
 	<dependencies>
+	
+		<dependency>
+			<groupId>com.ibm.anz.iib.apps</groupId>
+			<artifactId>httpJsonToHttpJson</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.ibm.iib</groupId>
+			<artifactId>IntegrationAPI</artifactId>
+			<version>10.0.0.3</version>
+			<scope>system</scope>
+			<systemPath>/root/IIB/iib-10.0.0.3/common/classes/IntegrationAPI.jar</systemPath>
+		</dependency>
+
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
